[package]
name = "lqos_probe"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
allocative = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lqos_config = { path = "../lqos_config" }
rand = { version = "0.8.6", default-features = false, features = ["std", "std_rng"] }
surge-ping = "0.8.1"
